--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">26 minutes ago</div>
+                        <div class="date">52 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Choosing Bhagavad Gita or Brothel | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">44 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Freeing Consciousness - The Path from Distraction to Liberation</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">46 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN REMATCH BUT THEY'RE ACTUALLY GOOD?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>The Bizarre Cult of Pythagoras</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Pythagoras Was a Cult Leader</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>How Pythagoras Punished His Followers</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Spiritual Growth Is Beyond Your Comfort Zone | Eckhart Tolle on The Path To Enlightenment (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>The second tier of our Seed Allocation Programme - DarwinIA Gold</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>The Monthly Seed Allocation Programme - DarwinIA SILVER</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>ChatGPT's False Facts: My Son's Kevin Davey Story! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -688,7 +688,7 @@
                     <div class="video-info">
                         <h3>The first politician on Gary's Economics</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -699,7 +699,7 @@
                     <div class="video-info">
                         <h3>How the Market Tests Traders</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -831,7 +831,7 @@
                     <div class="video-info">
                         <h3>Stubborn trading! The cost of ignoring the market...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -930,7 +930,7 @@
                     <div class="video-info">
                         <h3>My message to Reform supporters</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">26 minutes ago</div>
+                            <div class="date">52 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>The second tier of our Seed Allocation Programme - DarwinIA Gold</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5127,7 +5127,7 @@
                         <div class="video-info">
                             <h3>The Monthly Seed Allocation Programme - DarwinIA SILVER</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5149,7 +5149,7 @@
                         <div class="video-info">
                             <h3>ChatGPT's False Facts: My Son's Kevin Davey Story! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5362,7 +5362,7 @@
                         <div class="video-info">
                             <h3>The first politician on Gary's Economics</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5373,7 +5373,7 @@
                         <div class="video-info">
                             <h3>How the Market Tests Traders</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5395,7 +5395,7 @@
                         <div class="video-info">
                             <h3>Stubborn trading! The cost of ignoring the market...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5439,7 +5439,7 @@
                         <div class="video-info">
                             <h3>My message to Reform supporters</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Choosing Bhagavad Gita or Brothel | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">44 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Freeing Consciousness - The Path from Distraction to Liberation</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">46 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>The Bizarre Cult of Pythagoras</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Pythagoras Was a Cult Leader</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>How Pythagoras Punished His Followers</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7293,7 +7293,7 @@
                         <div class="video-info">
                             <h3>Spiritual Growth Is Beyond Your Comfort Zone | Eckhart Tolle on The Path To Enlightenment (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN REMATCH BUT THEY'RE ACTUALLY GOOD?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
